About implemented with links to github. Next is the shortcut keys help

--- a/src/main/resources/nl/bos/views/Menu.fxml
+++ b/src/main/resources/nl/bos/views/Menu.fxml
@@ -3,12 +3,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-            minWidth="-Infinity"
-            prefHeight="750.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/8.0.172-ea"
+            minWidth="-Infinity" prefHeight="750.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/8.0.121"
             fx:controller="nl.bos.controllers.Menu">
     <top>
-        <MenuBar fx:id="menubar" disable="true" BorderPane.alignment="CENTER">
-            <Menu mnemonicParsing="false" text="Tools">
+        <MenuBar fx:id="menubar" BorderPane.alignment="CENTER">
+            <Menu fx:id="menuTools" disable="true" mnemonicParsing="false" text="Tools">
                 <MenuItem mnemonicParsing="false" onAction="#describeObject" text="Describe Object"/>
                 <MenuItem mnemonicParsing="false" onAction="#getAttributes" text="Get Attributes"/>
                 <SeparatorMenuItem mnemonicParsing="false"/>
@@ -20,19 +19,24 @@
                 <MenuItem fx:id="miExportResults" disable="true" mnemonicParsing="false" onAction="#exportResults"
                           text="Export Results"/>
             </Menu>
-            <Menu mnemonicParsing="false" text="Administration">
+            <Menu fx:id="menuAdmin" disable="true" mnemonicParsing="false" text="Administration">
                 <MenuItem mnemonicParsing="false" onAction="#manageUsers" text="Manage Users"/>
                 <MenuItem mnemonicParsing="false" onAction="#manageJobs" text="Manage Jobs"/>
                 <MenuItem mnemonicParsing="false" onAction="#manageWorkflows" text="Manage Workflows"/>
             </Menu>
-            <Menu mnemonicParsing="false" text="Info">
+            <Menu fx:id="menuInfo" disable="true" mnemonicParsing="false" text="Info">
                 <MenuItem mnemonicParsing="false" onAction="#showCurrentSessions" text="Show Current Sessions..."/>
                 <SeparatorMenuItem mnemonicParsing="false"/>
                 <MenuItem mnemonicParsing="false" onAction="#getLastSQL" text="Get Last SQL"/>
             </Menu>
-            <Menu mnemonicParsing="false" text="Special">
+            <Menu fx:id="menuSpecial" disable="true" mnemonicParsing="false" text="Special">
                 <MenuItem mnemonicParsing="false" onAction="#enableSQLTrace" text="Enable SQL Trace"/>
                 <MenuItem mnemonicParsing="false" onAction="#disableSQLTrace" text="Disable SQL Trace"/>
+            </Menu>
+            <Menu fx:id="menuHelp" mnemonicParsing="false" text="Help">
+                <!--<MenuItem mnemonicParsing="false" onAction="#help" text="DQL Tester FX Help"/>-->
+                <!--<MenuItem mnemonicParsing="false" onAction="#shortcutKeys" text="Shortcut Keys"/>-->
+                <MenuItem mnemonicParsing="false" onAction="#about" text="About DQL Tester FX"/>
             </Menu>
         </MenuBar>
     </top>
